# ardupilot-mavsdk

./: .gitignore  Readme.md  build_examples.sh  build_mavsdk.sh  run_docker.sh  run_example.sh  run_sitl_arducopter.sh  run_sitl_ardurover.sh  run_sitl_px4.sh
docker/: Dockerfile-Ubuntu-20.04  Dockerfile-Ubuntu-20.04-APM-SITL-Copter-4.1.2  Dockerfile-Ubuntu-20.04-APM-SITL-Rover-4.1.2  Dockerfile-Ubuntu-22.04  Dockerfile-Ubuntu-22.04-APM-SITL-Copter-4.5.5  Dockerfile-Ubuntu-22.04-APM-SITL-Rover-4.5.5  build_and_push_docker_images.sh
docs/: ardupilot.md
examples/actions/: CMakeLists.txt  actions.cpp
examples/info_telemetry/: CMakeLists.txt  info_telemetry.cpp
examples/missions/: CMakeLists.txt
examples/missions_copter/: CMakeLists.txt  missions_copter.cpp  test.plan
examples/missions_rover/: CMakeLists.txt  missions_rover.cpp  test.plan
examples/param/: CMakeLists.txt  param.cpp
